
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(CUB C)
SET(CUB_VERSION_MAJOR 1)
SET(CUB_VERSION_MINOR 3)
SET(CMAKE_VERBOSE_MAKEFILE ON)
#http://permalink.gmane.org/gmane.comp.programming.tools.cmake.user/35722
FILE(WRITE ${CMAKE_BINARY_DIR}/f.h "void f(void)\n")
include_directories ("${PROJECT_SOURCE_DIR}/cub")
ADD_SUBDIRECTORY (cub)
ADD_LIBRARY(f STATIC f.h)
SET_TARGET_PROPERTIES(f PROPERTIES
    LINKER_LANGUAGE C PUBLIC_HEADER ${CMAKE_BINARY_DIR}/cub/cub.cuh)
ADD_CUSTOM_COMMAND(TARGET f POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E remove $<TARGET_FILE:f>)
INSTALL(TARGETS f EXPORT f
    PUBLIC_HEADER DESTINATION include
    ARCHIVE DESTINATION include OPTIONAL)
INSTALL(EXPORT f DESTINATION share)
